Bug 394543 - KDE Discover Crash on start.
Summary: KDE Discover Crash on start.
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (show other bugs)
Version: 5.12.90
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords: drkonqi
: 394463 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-05-21 22:36 UTC by Tyler Kruse
Modified: 2018-05-22 15:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tyler Kruse 2018-05-21 22:36:02 UTC
Application: plasma-discover (5.12.90)

Qt Version: 5.10.0
Frameworks Version: 5.47.0
Operating System: Linux 4.13.0-39-generic x86_64
Distribution: KDE neon Developer Edition

-- Information about the crash:
- What I was doing when the application crashed: I encountered this a few times I uninstalled the OS and reinstalled it, opened up Discover, and it would work just fine. As soon as I updated it though, Discover worked fine until it was closed. Whenever it is closed it crashes on start.

The crash can be reproduced every time.

-- Backtrace:
Application: Discover (plasma-discover), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f49e70908c0 (LWP 19910))]

Thread 3 (Thread 0x7f49c9e51700 (LWP 19913)):
#0  0x00007f49e239d74d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f49dcd5838c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f49dcd5849c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f49e2fd95cb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f49e2f8064a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f49e2da0554 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f49e397ba35 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#7  0x00007f49e2da56eb in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007f49dee4f6ba in start_thread (arg=0x7f49c9e51700) at pthread_create.c:333
#9  0x00007f49e23a941d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7f49cb062700 (LWP 19912)):
#0  0x00007f49e239d74d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f49dcd5838c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f49dcd5849c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f49e2fd95cb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f49e2f8064a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f49e2da0554 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f49e4ca12c5 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#7  0x00007f49e2da56eb in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007f49dee4f6ba in start_thread (arg=0x7f49cb062700) at pthread_create.c:333
#9  0x00007f49e23a941d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7f49e70908c0 (LWP 19910)):
[KCrash Handler]
#6  DiscoverObject::modes (this=this@entry=0xe4a2a0) at /workspace/build/discover/DiscoverObject.cpp:152
#7  0x0000000000416a3a in DiscoverObject::openMode (this=this@entry=0xe4a2a0, _mode=...) at /workspace/build/discover/DiscoverObject.cpp:164
#8  0x0000000000414784 in processArgs (parser=0xe1fcf0, mainWindow=mainWindow@entry=0xe4a2a0) at /workspace/build/discover/main.cpp:72
#9  0x0000000000412c4c in main (argc=3, argv=<optimized out>) at /workspace/build/discover/main.cpp:138

Possible duplicates by query: bug 390066.

Reported using DrKonqi
Comment 1 Aleix Pol 2018-05-22 13:27:58 UTC
Git commit 0c4e121d78df65694694c0cee0c6feed0cb14da7 by Aleix Pol.
Committed on 22/05/2018 at 13:26.
Pushed by apol into branch 'Plasma/5.12'.

Guard against calling a null object

M  +6    -1    discover/DiscoverObject.cpp

https://commits.kde.org/discover/0c4e121d78df65694694c0cee0c6feed0cb14da7
Comment 2 Aleix Pol 2018-05-22 15:05:10 UTC
*** Bug 394463 has been marked as a duplicate of this bug. ***