Guard against calling a null object

BUG: 394543